--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "twilio-video": "^2.3.0",
     "yarn": "^1.22.4"
   },
   "scripts": {
